syntax = "proto3";

package omnibot.actionrpg.game.interop;

option csharp_namespace = "OmniBot.ActionRpg.Game.Requests";

message GenerateCharacterInput {
    string message_id = 1;
    string timestamp = 2;
    string name = 3;
    int32 race = 4;
}

message GenerateCharacterOutput {
    string message_id = 1;
    string timestamp = 2;
    string response_to_message_id = 3;
    string data = 4;
}